--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,201 @@
+/* Importación de fuente */
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 
+/* Variables de colores */
 :root {
 	--primario: #013E6A;
 	--secundario: #1d6389;
-  --terciario: #082C5D;
-  --button:#2196F3;
-  --texto: #313436;
-  --white:#FFF;
-  --black:#000;
+	--terciario: #082C5D;
+	--button: #2196F3;
+	--texto: #313436;
+	--white: #FFF;
+	--black: #000;
 }
 
-
+/* Estilos generales */
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", sans-serif;
-  color: var(--texto);
-  }
+	margin: 0;
+	padding: 0;
+	font-family: "Open Sans", sans-serif;
+	color: var(--texto);
+}
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/* Estilos para el formulario */
+form {
+	margin: 5px;
+	align-items: center;
+}
+
+input {
+	margin-left: 35px;
+	border-radius: 25px;
+	border-color: #aaa;
+	font-size: 12px;
+	padding: 5px;
+}
+
+/* Estilos para el menú */
+div#toggle-menu {
+	cursor: pointer;
+	height: 30px;
+	position: absolute;
+	left: 14px;
+	top: 25px;
+	width: 30px;
+	z-index: 999;
+}
+
+div#toggle-menu span {
+	background-color: var(--secundario);
+	display: block;
+	height: 4px;
+	position: absolute;
+	width: 30px;
+}
+
+.header-activo #toggle-menu span {
+	background-color: #ffffff;
+}
+
+/* Estilos para el contenido */
+#body-contenido {
+	position: absolute;
+	margin-left: 15px;
+	top: 0px;
+	left: 2.5em;
+	right: 0;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+}
+
+.container {
+	margin-right: auto;
+	margin-left: auto;
+	padding-left: 15px;
+}
+
+/* Media Queries para diseño responsivo */
+@media (max-width: 1200px) {
+	.container-data,
+	.container-data2 {
+		width: 80%;
+		padding-left: 50px;
+	}
+
+	.container-formulario {
+		width: 90%;
+		margin-left: 25px;
+	}
+
+	.container-buttons {
+		padding-left: 200px;
+	}
+}
+
+@media (max-width: 992px) {
+	.container-data,
+	.container-data2 {
+		width: 100%;
+		padding-left: 20px;
+	}
+
+	.container-formulario {
+		width: 100%;
+		margin-left: 15px;
+	}
+
+	.container-buttons {
+		padding-left: 100px;
+	}
+}
+
+@media (max-width: 768px) {
+	#body-contenido {
+		margin-left: 5px;
+		left: 0;
+	}
+
+	.container-header1,
+	.container-header2 {
+		flex-direction: column;
+		align-items: flex-start;
+		padding-left: 10px;
+		width: 100%;
+	}
+
+	.container-data,
+	.container-data2 {
+		width: 100%;
+		padding-left: 10px;
+	}
+
+	.container-formulario {
+		width: 100%;
+		margin-left: 0;
+	}
+
+	.container-buttons {
+		padding-left: 50px;
+		width: 100%;
+	}
+}
+
+@media (max-width: 576px) {
+	.container-header {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.container-data,
+	.container-data2,
+	.container-formulario {
+		width: 100%;
+		padding-left: 0;
+		margin-left: 0;
+	}
+
+	.button {
+		width: 100%;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+
+	.cardList {
+		margin-left: 0;
+		margin-top: 100px;
+		width: 100%;
+	}
+
+	.app {
+		width: 100%;
+		padding-left: 0;
+	}
+
+  .container2{
+    width: 0%;
+    height: 2%;
+  }
+}
+
+/* Estilo base */
+.container2,
+.Title {
+  display: block;
+}
+
+/* Ocultar .container2 y .Title cuando la pantalla es menor a 768px de ancho */
+@media (max-width: 768px) {
+  .container2,
+  .Title {
+    display: none;
+  }
 }
 
 form {
