--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ select {
 
 .registro-activo{
   margin-top: 50px;
-  width: 1500px;
+  width: 90%;
   height: 50%;
   text-align: center;
   padding: 50px;
